[gd_scene load_steps=2 format=3 uid="uid://gameover_ss"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_gameover"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_gameover")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.12, 0.12, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -190.0
offset_right = 165.0
offset_bottom = 190.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 16
alignment = 1

[node name="GameOverLabel" type="Label" parent="Panel/VBoxContainer"]
theme_override_colors/font_color = Color(1, 0.35, 0.35, 1)
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer"]
theme_override_font_sizes/font_size = 24
text = "Score: 0"
horizontal_alignment = 1

[node name="CoinsLabel" type="Label" parent="Panel/VBoxContainer"]
theme_override_font_sizes/font_size = 16
text = "Coins: +0"
horizontal_alignment = 1

[node name="TipLabel" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "Tip: Jump over obstacles!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RetryButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
text = "TRY AGAIN"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 12

[node name="ShopButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(110, 40)
text = "SHOP"

[node name="MenuButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(110, 40)
text = "LEVELS"

[connection signal="pressed" from="Panel/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
